--- a/app/App/Taxonomy/tpl/form-military-unit.html
+++ b/app/App/Taxonomy/tpl/form-military-unit.html
@@ -1,7 +1,7 @@
 <div class="form-row">
     <div class="form-group col-md-12">
-        <label for="app-entity-edit-name" class="form-control-label">Nom</label>
-        <input id="app-entity-edit-name" class="form-control form-control-sm" data-ng-model="entity.name" />
+        <label for="app-entity-edit-name" class="form-control-label">Nom <span class="red-color">*</span></label>
+        <input id="app-entity-edit-name" class="form-control form-control-sm" data-ng-model="entity.name" required="required" />
     </div>
 </div>
 <div class="form-row">
