--- a/app/App/User/Edit/Edit.html
+++ b/app/App/User/Edit/Edit.html
@@ -20,9 +20,9 @@
         <div class="col-lg-7 col-md-9">
             <form class="mt-2 mb-2">
                 <div class="form-group row">
-                    <label for="app-user-edit-name" class="control-label col-md-2 text-md-right">Nom</label>
+                    <label for="app-user-edit-name" class="control-label col-md-2 text-md-right">Nom <span class="red-color">*</span></label>
                     <div class="col-md-10">
-                        <input type="text" data-ng-model="form.name" class="form-control form-control-sm" id="app-user-edit-name" placeholder="Saissisez votre nom" required />
+                        <input type="text" data-ng-model="form.name" class="form-control form-control-sm" id="app-user-edit-name" placeholder="Saissisez votre nom" required="required" />
                     </div>
                 </div>
                 <div class="form-group row">
