--- a/app/Admin/Content/Edit/Edit.html
+++ b/app/Admin/Content/Edit/Edit.html
@@ -14,23 +14,23 @@
     <form>
         <div class="col-xl-10 col-12">
             <div class="form-group row">
-                <label for="admin-content-edit-title" class="col-md-2 col-form-label text-md-right">Titre </label>
+                <label for="admin-content-edit-title" class="col-md-2 col-form-label text-md-right">Titre <span class="red-color">*</span></label>
                 <div class="col-md-10">
-                    <input id="admin-content-edit-title" type="text" class="form-control" data-ng-model="content.title" />
+                    <input id="admin-content-edit-title" type="text" class="form-control" data-ng-model="content.title" required="required" />
                     <small class="form-text text-muted">Optez pour un titre clair, décrivant précisément votre contenu et comportant des mots-clés signifiant si vous publiez un article.</small>
                 </div>
             </div>
             <div class="form-group row">
-                <label for="admin-content-edit-tags" class="col-md-2 col-form-label text-md-right">Tags </label>
+                <label for="admin-content-edit-tags" class="col-md-2 col-form-label text-md-right">Tags</label>
                 <div class="col-md-10">
                     <input id="admin-content-edit-tags" type="text" class="form-control form-control-sm" data-ng-model="content.tags" />
                     <small class="form-text text-muted">Séparez vos tags par une virgule</small>
                 </div>
             </div>
             <div class="form-group row">
-                <label for="admin-content-edit-type" class="col-md-2 col-form-label text-md-right">Type </label>
+                <label for="admin-content-edit-type" class="col-md-2 col-form-label text-md-right">Type <span class="red-color">*</span></label>
                 <div class="col-md-10">
-                    <select id="admin-content-edit-type" name="admin-content-edit-type" class="custom-select" data-ng-model="content.type">
+                    <select id="admin-content-edit-type" name="admin-content-edit-type" class="custom-select" data-ng-model="content.type" required="required">
                         <option value="" disabled>Sélectionnez ...</option>
                         <option value="blogContent">Article de blog</option>
                         <option value="helpContent">Page d'aide</option>
@@ -39,9 +39,9 @@
                 </div>
             </div>
             <div class="form-group row" data-ng-if="content.type == 'staticContent'">
-                <label for="admin-content-edit-onHomepage" class="col-md-2 col-form-label text-md-right">Publié en page d'accueil </label>
+                <label for="admin-content-edit-onHomepage" class="col-md-2 col-form-label text-md-right">Publié en page d'accueil <span class="red-color">*</span></label>
                 <div class="col-md-10">
-                    <select id="admin-content-edit-onHomepage" name="admin-content-edit-onHomepage" class="custom-select" data-ng-model="content.onHomepage">
+                    <select id="admin-content-edit-onHomepage" name="admin-content-edit-onHomepage" class="custom-select" data-ng-model="content.onHomepage" required="required">
                         <option value="" disabled>Sélectionnez ...</option>
                         <option value="1">Oui</option>
                         <option value="0">Non</option>
@@ -49,9 +49,9 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="admin-content-edit-status" class="col-md-2 col-form-label text-md-right">Statut </label>
+                <label for="admin-content-edit-status" class="col-md-2 col-form-label text-md-right">Statut <span class="red-color">*</span></label>
                 <div class="col-md-10">
-                    <select id="admin-content-edit-status" name="admin-content-edit-status" class="custom-select" data-ng-model="content.status">
+                    <select id="admin-content-edit-status" name="admin-content-edit-status" class="custom-select" data-ng-model="content.status" required="required">
                         <option value="" disabled>Sélectionnez ...</option>
                         <option value="draft">Brouillon</option>
                         <option value="public">Public</option>
@@ -62,7 +62,7 @@
             </div>
             <hr />
             <div class="form-group row">
-                <label for="admin-content-edit-image" class="col-md-2 col-form-label text-md-right">Image d'illustration </label>
+                <label for="admin-content-edit-image" class="col-md-2 col-form-label text-md-right">Image d'illustration</label>
                 <div class="col-md-10">
                     <input id="app-user-edit-picture" type="file" ngf-select ng-model="form.picture" name="file" accept="image/*" ngf-max-size="2MB" required ngf-model-invalid="errorFile">
                     <i ng-show="myForm.file.$error.required">*required</i><br>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="admin-content-edit-content"  class="col-md-2 col-form-label text-md-right">Contenu </label>
+                <label for="admin-content-edit-content"  class="col-md-2 col-form-label text-md-right">Contenu <span class="red-color">*</span></label>
                 <div class="col-md-10">
                     <div id="admin-content-edit-content" ckeditor="options" data-ng-model="content.content"></div>
                 </div>
@@ -100,8 +100,9 @@
             </div>
 
             <div class="text-right">
-                <button data-ng-if="submit.success == false" class="btn btn-sm btn-primary" type="button" data-ng-click="submit.action()">Soumettre <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
-                <button data-ng-if="submit.success == true" class="btn btn-sm btn-success" type="button" data-ng-click="submit.action()">Succès !</button>
+                <button data-ng-if="submit.success == false && submit.loading == false" class="btn btn-sm btn-primary" type="button" data-ng-click="submit.action()">Soumettre</button>
+                <button data-ng-if="submit.success == false && submit.loading == true" class="btn btn-sm btn-primary" type="button">Enregistrement <i class="fa fa-spin fa-circle-o-notch"></i></button>
+                <button data-ng-if="submit.success == true" class="btn btn-sm btn-success" type="button">Succès !</button>
             </div>
 
             <hr data-ng-if="content.id != null" />
