--- a/app/Admin/Entity/Edit/tpl/edit-resources-resource.html
+++ b/app/Admin/Entity/Edit/tpl/edit-resources-resource.html
@@ -2,9 +2,9 @@
     <div data-ng-if="resource.id" class="row">
         <div class="col-md-9">
             <div class="form-group row">
-                <label for="admin-entity-edit-resource-type" class="col-md-4 col-form-label text-md-right">Type de ressource</label>
+                <label for="admin-entity-edit-resource-type" class="col-md-4 col-form-label text-md-right">Type de ressource <span class="red-color">*</span></label>
                 <div class="col-md-8">
-                    <select id="admin-entity-edit-resource-type" name="admin-entity-edit-resource-type" class="custom-select" data-ng-model="resource.type">
+                    <select id="admin-entity-edit-resource-type" name="admin-entity-edit-resource-type" class="custom-select" data-ng-model="resource.type" required="required">
                         <option value="" disabled>Sélectionnez ...</option>
                         <option value="page">Page</option>
                         <option value="envelop">Enveloppe</option>
@@ -13,9 +13,9 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="admin-entity-edit-resource-orderInWill" class="col-md-4 col-form-label text-md-right">Index de la ressource dans le testament</label>
+                <label for="admin-entity-edit-resource-orderInWill" class="col-md-4 col-form-label text-md-right">Index de la ressource dans le testament <span class="red-color">*</span></label>
                 <div class="col-sm-3">
-                    <input type="number" id="admin-entity-edit-resource-orderInWill" class="form-control form-control-sm" data-ng-model="resource.orderInWill" />
+                    <input type="number" id="admin-entity-edit-resource-orderInWill" class="form-control form-control-sm" data-ng-model="resource.orderInWill" required="required" />
                 </div>
                 <div class="col-sm-1">
                     <p class="form-control-static">/</p>
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="admin-entity-edit-resource-images" class="col-md-4 col-form-label text-md-right">Identifiants des images</label>
+                <label for="admin-entity-edit-resource-images" class="col-md-4 col-form-label text-md-right">Identifiants des images <span class="red-color">*</span></label>
                 <div class="col-md-8">
-                    <input id="admin-entity-edit-resource-images" class="form-control form-control-sm" data-ng-model="resource.images" />
+                    <input id="admin-entity-edit-resource-images" class="form-control form-control-sm" data-ng-model="resource.images" required="required" />
                     <small  class="form-text text-muted">Identifiants des images de la ressource, séparés par des virgules. Ex: 02a, 02b, 02c</small>
                 </div>
             </div>
