--- a/app/Admin/Entity/Edit/tpl/edit-will.html
+++ b/app/Admin/Entity/Edit/tpl/edit-will.html
@@ -1,20 +1,20 @@
 <label class="big">À propos du testament</label>
 
 <div class="form-group row">
-    <label for="admin-entity-edit-will-callNumber" class="col-md-4 col-form-label text-md-right">Cote</label>
+    <label for="admin-entity-edit-will-callNumber" class="col-md-4 col-form-label text-md-right">Cote <span class="red-color">*</span></label>
     <div class="col-md-8">
-        <input id="admin-entity-edit-will-callNumber" class="form-control form-control-sm" data-ng-model="entity.will.callNumber" />
+        <input id="admin-entity-edit-will-callNumber" class="form-control form-control-sm" data-ng-model="entity.will.callNumber" required="required" />
     </div>
 </div>
 <div class="form-group row">
-    <label for="admin-entity-edit-will-minuteDate" class="col-md-4 col-form-label text-md-right">Date de la minute</label>
+    <label for="admin-entity-edit-will-minuteDate" class="col-md-4 col-form-label text-md-right">Date de la minute <span class="red-color">*</span></label>
     <div class="col-md-8 row">
         <div class="col-md-5">
-            <input id="admin-entity-edit-will-minuteDate" class="form-control form-control-sm" data-ng-model="entity.will.minuteDate" placeholder="Ex: 23 juillet 1915" />
+            <input id="admin-entity-edit-will-minuteDate" class="form-control form-control-sm" data-ng-model="entity.will.minuteDate" placeholder="Ex: 23 juillet 1915" required="required" />
         </div>
-        <label for="admin-entity-edit-will-minuteYear" class="col-md-3 col-form-label text-md-right">Précisez l'année</label>
+        <label for="admin-entity-edit-will-minuteYear" class="col-md-3 col-form-label text-md-right">Précisez l'année <span class="red-color">*</span></label>
         <div class="col-md-4">
-            <input id="admin-entity-edit-will-minuteYear" class="form-control form-control-sm" placeholder="de début s'il s'agit d'une plage" data-ng-model="entity.will.minuteYear" />
+            <input id="admin-entity-edit-will-minuteYear" class="form-control form-control-sm" placeholder="de début s'il s'agit d'une plage" data-ng-model="entity.will.minuteYear" required="required" />
         </div>
     </div>
 </div>
@@ -26,14 +26,14 @@
 </div>
 
 <div class="form-group row">
-    <label for="admin-entity-edit-will-willWritingDate" class="col-md-4 col-form-label text-md-right">Date d'écriture du testament</label>
+    <label for="admin-entity-edit-will-willWritingDate" class="col-md-4 col-form-label text-md-right">Date d'écriture du testament <span class="red-color">*</span></label>
     <div class="col-md-8 row">
         <div class="col-md-5">
-            <input id="admin-entity-edit-will-willWritingDate" class="form-control form-control-sm" data-ng-model="entity.will.willWritingDate" placeholder="Ex: 23 juillet 1915" />
+            <input id="admin-entity-edit-will-willWritingDate" class="form-control form-control-sm" data-ng-model="entity.will.willWritingDate" placeholder="Ex: 23 juillet 1915" required="required" />
         </div>
-        <label for="admin-entity-edit-will-willWritingYear" class="col-md-3 col-form-label text-md-right">Précisez l'année</label>
+        <label for="admin-entity-edit-will-willWritingYear" class="col-md-3 col-form-label text-md-right">Précisez l'année <span class="red-color">*</span></label>
         <div class="col-md-4">
-            <input id="admin-entity-edit-will-willWritingYear" class="form-control form-control-sm" placeholder="de début s'il s'agit d'une plage" data-ng-model="entity.will.willWritingYear" />
+            <input id="admin-entity-edit-will-willWritingYear" class="form-control form-control-sm" placeholder="de début s'il s'agit d'une plage" data-ng-model="entity.will.willWritingYear" required="required" />
         </div>
     </div>
 </div>
@@ -45,17 +45,17 @@
 </div>
 
 <div class="form-group row">
-    <label for="admin-entity-edit-will-testator" class="col-md-4 col-form-label text-md-right">Testateur</label>
+    <label for="admin-entity-edit-will-testator" class="col-md-4 col-form-label text-md-right">Testateur <span class="red-color">*</span></label>
     <div class="col-md-8">
-        <select class="custom-select col-md-6" id="admin-entity-edit-will-testator" data-ng-model="entity.will.testator" name="admin-entity-edit-will-testator" data-ng-options="testator.id as testator.name for testator in testators"></select>
+        <select class="custom-select col-md-6" id="admin-entity-edit-will-testator" data-ng-model="entity.will.testator" name="admin-entity-edit-will-testator" data-ng-options="testator.id as testator.name for testator in testators" required="required"></select>
         <p class="help-block"><a ui-sref="transcript.app.taxonomy.create({type: 'testators'})" target="_blank">Créer un nouveau testateur</a></p>
     </div>
 </div>
 
 <div class="form-group row">
-    <label for="admin-entity-edit-will-hostingOrganization" class="col-md-4 col-form-label text-md-right">Institution de conservation</label>
+    <label for="admin-entity-edit-will-hostingOrganization" class="col-md-4 col-form-label text-md-right">Institution de conservation <span class="red-color">*</span></label>
     <div class="col-md-8">
-        <select id="admin-entity-edit-will-hostingOrganization" name="admin-entity-edit-will-hostingOrganization" class="custom-select" data-ng-model="entity.will.hostingOrganization">
+        <select id="admin-entity-edit-will-hostingOrganization" name="admin-entity-edit-will-hostingOrganization" class="custom-select" data-ng-model="entity.will.hostingOrganization" required="required">
             <option value="" disabled>Sélectionnez ...</option>
             <option value="AN">Archives nationales</option>
             <option value="AD78">Archives départementales des Yvelines</option>
@@ -63,15 +63,15 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="admin-entity-edit-will-identificationUser" class="col-md-4 col-form-label text-md-right">Personne ayant identifié le document</label>
+    <label for="admin-entity-edit-will-identificationUser" class="col-md-4 col-form-label text-md-right">Personne ayant identifié le document <span class="red-color">*</span></label>
     <div class="col-md-8">
-        <input id="admin-entity-edit-will-identificationUser" class="form-control form-control-sm" data-ng-model="entity.will.identificationUser" />
+        <input id="admin-entity-edit-will-identificationUser" class="form-control form-control-sm" data-ng-model="entity.will.identificationUser" required="required" />
     </div>
 </div>
 <div class="form-group row">
-    <label for="admin-entity-edit-will-willNumber" class="col-md-4 col-form-label text-md-right">Numéro de numérisation</label>
+    <label for="admin-entity-edit-will-willNumber" class="col-md-4 col-form-label text-md-right">Numéro de numérisation <span class="red-color">*</span></label>
     <div class="col-md-8">
-        <input type="number" id="admin-entity-edit-will-willNumber" class="form-control form-control-sm" data-ng-model="entity.willNumber" placeholder="Permettant d'identifier les images du testament" />
+        <input type="number" id="admin-entity-edit-will-willNumber" class="form-control form-control-sm" data-ng-model="entity.willNumber" placeholder="Permettant d'identifier les images du testament" required="required" />
     </div>
 </div>
 
