--- a/app/Admin/Training/Edit/tpl/edit-exercise.html
+++ b/app/Admin/Training/Edit/tpl/edit-exercise.html
@@ -5,9 +5,9 @@
 <fieldset>
     <label>Page d'exercice</label>
     <div class="form-group row">
-        <label for="admin-trainingContent-edit-exercise-image" class="col-md-2 col-form-label text-md-right">Image à transcrire</label>
+        <label for="admin-trainingContent-edit-exercise-image" class="col-md-2 col-form-label text-md-right">Image à transcrire <span class="red-color">*</span></label>
         <div class="col-md-10">
-            <input id="admin-trainingContent-edit-exercise-image" type="string" class="form-control form-control-sm" data-ng-model="trainingContent.exercise.imageToTranscribe" />
+            <input id="admin-trainingContent-edit-exercise-image" type="string" class="form-control form-control-sm" data-ng-model="trainingContent.exercise.imageToTranscribe" required="required" />
             <small class="form-text text-muted">Spécifiez une URL externe, ou uploadez une image par la suite</small>
             <div ng-if="isExternMedia() == true && trainingContent.illustration != null"><img src="{{ trainingContent.illustration }}" class="img-150px" /></div>
             <div ng-if="isExternMedia() == false && trainingContent.illustration != null"><img src="{{ api_web}}/uploads/{{ trainingContent.illustration }}" class="img-150px" /></div>
@@ -112,9 +112,9 @@
 <fieldset>
     <label>Correction de l'exercice</label>
     <div class="form-group row">
-        <label for="admin-trainingContent-edit-exercise-correction-transcript"  class="col-md-2 col-form-label text-md-right">Transcription correcte</label>
+        <label for="admin-trainingContent-edit-exercise-correction-transcript"  class="col-md-2 col-form-label text-md-right">Transcription correcte <span class="red-color">*</span></label>
         <div class="col-md-10">
-            <textarea id="admin-trainingContent-edit-exercise-correction-transcript" class="form-control form-control-sm" data-ng-model="trainingContent.exercise.correction.transcript"></textarea>
+            <textarea id="admin-trainingContent-edit-exercise-correction-transcript" class="form-control form-control-sm" data-ng-model="trainingContent.exercise.correction.transcript" required="required"></textarea>
         </div>
     </div>
     <div class="form-group row">
