--- a/app/Admin/Training/Edit/tpl/edit-presentation.html
+++ b/app/Admin/Training/Edit/tpl/edit-presentation.html
@@ -1,7 +1,7 @@
 <div class="form-group row">
-    <label for="admin-trainingContent-edit-image" class="col-md-2 col-form-label text-md-right">Image d'illustration</label>
+    <label for="admin-trainingContent-edit-image" class="col-md-2 col-form-label text-md-right">Image d'illustration <span class="red-color">*</span></label>
     <div class="col-md-10">
-        <input id="admin-trainingContent-edit-image" type="string" class="form-control form-control-sm" data-ng-model="trainingContent.illustration" />
+        <input id="admin-trainingContent-edit-image" type="string" class="form-control form-control-sm" data-ng-model="trainingContent.illustration" required="required" />
         <small class="form-text text-muted">Spécifiez une URL externe, ou uploadez une image par la suite</small>
         <div ng-if="isExternMedia() == true && trainingContent.illustration != null"><img src="{{ trainingContent.illustration }}" class="img-150px" /></div>
         <div ng-if="isExternMedia() == false && trainingContent.illustration != null"><img src="{{ api_web}}/uploads/{{ trainingContent.illustration }}" class="img-150px" /></div>
@@ -15,7 +15,7 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="admin-trainingContent-edit-content"  class="col-md-2 col-form-label text-md-right">Contenu </label>
+    <label for="admin-trainingContent-edit-content"  class="col-md-2 col-form-label text-md-right">Contenu  <span class="red-color">*</span></label>
     <div class="col-md-10">
         <div id="admin-trainingContent-edit-content" ckeditor="options" data-ng-model="trainingContent.content"></div>
     </div>
