--- a/app/App/Security/Login/Login.html
+++ b/app/App/Security/Login/Login.html
@@ -10,15 +10,15 @@
     <h1 class="page-heading">Page de connexion</h1>
     <form class="mt-2 mb-5">
         <div class="form-group row">
-            <label for="app-security-login-login" class="col-lg-2 col-md-3 col-12 col-form-label text-md-right">Email</label>
+            <label for="app-security-login-login" class="col-lg-2 col-md-3 col-12 col-form-label text-md-right">Email <span class="red-color">*</span></label>
             <div class="col-lg-8 col-md-9 col-12">
-                <input type="email" data-ng-model="form.username" class="form-control form-control-sm" id="app-security-login-login" name="app-security-login-login" placeholder="Saisissez votre adresse email" required />
+                <input type="email" data-ng-model="form.username" class="form-control form-control-sm" id="app-security-login-login" name="app-security-login-login" placeholder="Saisissez votre adresse email" required="required" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="app-security-login-password" class="col-lg-2 col-md-3 col-12 col-form-label text-md-right">Mot de passe</label>
+            <label for="app-security-login-password" class="col-lg-2 col-md-3 col-12 col-form-label text-md-right">Mot de passe <span class="red-color">*</span></label>
             <div class="col-lg-8 col-md-9 col-12">
-                <input type="password" data-ng-model="form.password" class="form-control form-control-sm" id="app-security-login-password" name="app-security-login-login" placeholder="Saisissez votre mot de passe" required />
+                <input type="password" data-ng-model="form.password" class="form-control form-control-sm" id="app-security-login-password" name="app-security-login-login" placeholder="Saisissez votre mot de passe" required="required" />
             </div>
         </div>
         <div class="row text-right">
