--- a/app/App/Taxonomy/Ask/Ask.html
+++ b/app/App/Taxonomy/Ask/Ask.html
@@ -13,8 +13,8 @@
         <div class="col-sm-12" ng-if="preferences.taxonomyEditAccess == 'controlledAuthorization'">
             <form ng-if="context == 'ask'">
                 <div class="form-group">
-                    <label for="app-taxonomy-ask-request">Pouvez-vous détailler vos connaissances ?</label>
-                    <textarea type="text" class="form-control" rows="3" data-ng-model="form.taxonomyRequest"  id="app-taxonomy-ask-request" required ></textarea>
+                    <label for="app-taxonomy-ask-request">Pouvez-vous détailler vos connaissances ? <span class="red-color">*</span></label>
+                    <textarea type="text" class="form-control" rows="3" data-ng-model="form.taxonomyRequest"  id="app-taxonomy-ask-request" required="required" ></textarea>
                 </div>
 
                 <button type="submit"  data-ng-click="submit.action()" class="btn btn-primary ">Soumettre ma demande <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
