--- a/app/App/Taxonomy/tpl/form-place.html
+++ b/app/App/Taxonomy/tpl/form-place.html
@@ -1,7 +1,7 @@
 <div class="form-row">
     <div class="form-group col-md-6">
-        <label for="app-entity-edit-name" class="form-control-label">Nom de la localité</label>
-        <input id="app-entity-edit-name" class="form-control form-control-sm" data-ng-model="entity.name" />
+        <label for="app-entity-edit-name" class="form-control-label">Nom de la localité <span class="red-color">*</span></label>
+        <input id="app-entity-edit-name" class="form-control form-control-sm" data-ng-model="entity.name" required="required" />
     </div>
     <div class="form-group col-md-6">
         <label for="app-entity-edit-city" class="form-control-label">Ville</label>
