--- a/app/App/User/ChangePassword/ChangePassword.html
+++ b/app/App/User/ChangePassword/ChangePassword.html
@@ -12,21 +12,21 @@
         <div class="col-xl-10 col-12">
             <form class="mt-2 mb-2">
                 <div class="form-group row">
-                    <label for="app-user-change-password-current-password" class="col-md-4 col-form-label text-md-right">Mot de passe actuel</label>
+                    <label for="app-user-change-password-current-password" class="col-md-4 col-form-label text-md-right">Mot de passe actuel <span class="red-color">*</span></label>
                     <div class="col-md-8">
-                        <input type="password" data-ng-model="form.currentPassword" class="form-control form-control-sm" id="app-user-change-password-current-password" name="app-user-change-password-current-password" placeholder="Saisissez votre mot de passe actuel" required />
+                        <input type="password" data-ng-model="form.currentPassword" class="form-control form-control-sm" id="app-user-change-password-current-password" name="app-user-change-password-current-password" placeholder="Saisissez votre mot de passe actuel" required="required" />
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="app-user-change-password-plain-password-first" class="col-md-4 col-form-label text-md-right">Nouveau mot de passe</label>
+                    <label for="app-user-change-password-plain-password-first" class="col-md-4 col-form-label text-md-right">Nouveau mot de passe <span class="red-color">*</span></label>
                     <div class="col-md-8">
-                        <input type="password" data-ng-model="form.password.first" class="form-control form-control-sm" id="app-user-change-password-plain-password-first" name="app-user-change-password-plain-password-first" placeholder="Saisissez votre nouveau mot de passe" required />
+                        <input type="password" data-ng-model="form.password.first" class="form-control form-control-sm" id="app-user-change-password-plain-password-first" name="app-user-change-password-plain-password-first" placeholder="Saisissez votre nouveau mot de passe" required="required" />
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="app-user-change-password-plain-password-second" class="col-md-4 col-form-label text-md-right">Confirmation</label>
+                    <label for="app-user-change-password-plain-password-second" class="col-md-4 col-form-label text-md-right">Confirmation <span class="red-color">*</span></label>
                     <div class="col-md-8">
-                        <input type="password" data-ng-model="form.password.second" class="form-control form-control-sm" id="app-user-change-password-plain-password-second" name="app-user-change-password-plain-password-second" placeholder="Confirmez votre nouveau mot de passe" required />
+                        <input type="password" data-ng-model="form.password.second" class="form-control form-control-sm" id="app-user-change-password-plain-password-second" name="app-user-change-password-plain-password-second" placeholder="Confirmez votre nouveau mot de passe" required="required" />
                     </div>
                 </div>
 
