--- a/app/Admin/Entity/Import/tpl/import-resources.html
+++ b/app/Admin/Entity/Import/tpl/import-resources.html
@@ -7,5 +7,5 @@
     </div>
 </div>
 <div class="row mb-3" data-ng-repeat="resource in entity.resources">
-    <div class="col-sm-12" data-ng-include="'Admin/Entity/Import/tpl/import-resources-resource.html'"></div>
+    <div class="col-sm-12 border-top-1" data-ng-include="'Admin/Entity/Import/tpl/import-resources-resource.html'"></div>
 </div>
