--- a/app/App/Taxonomy/tpl/form-military-unit.html
+++ b/app/App/Taxonomy/tpl/form-military-unit.html
@@ -24,7 +24,7 @@
 </div>
 <div class="form-row">
     <div class="form-group col-md-12">
-        <label for="app-entity-edit-description" class="form-control-label">Description :</label>
+        <label for="app-entity-edit-description" class="form-control-label">Description</label>
         <textarea id="app-entity-edit-description" class="form-control form-control-sm" data-ng-model="entity.description"></textarea>
     </div>
 </div>
@@ -34,7 +34,7 @@
         <input id="app-entity-edit-updateComment" class="form-control form-control-sm" data-ng-model="entity.updateComment" />
     </div>
 </div>
-
-<button data-ng-click="submit.action()" type="submit" class="btn btn-sm btn-primary">Soumettre <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
-
+<div class="text-right mt-2">
+    <button data-ng-click="submit.action()" type="submit" class="btn btn-sm btn-primary">Soumettre <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
+</div>
 <div class="clearfix"></div>
