--- a/app/Admin/AppPreference/AppPreference.html
+++ b/app/Admin/AppPreference/AppPreference.html
@@ -12,7 +12,7 @@
 
     <form>
         <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-6 pr-5">
                 <fieldset>
                     <label class="big">Paramètres généraux</label>
                     <div class="form-group">
@@ -86,7 +86,7 @@
                     </div>
                 </fieldset>
             </div>
-            <div class="col-sm-5 ml-auto">
+            <div class="col-sm-6 pr-5">
                 <fieldset>
                     <label class="big">Contenus</label>
 
