--- a/app/Admin/Entity/Import/tpl/import-resources-resource.html
+++ b/app/Admin/Entity/Import/tpl/import-resources-resource.html
@@ -1,4 +1,4 @@
-<div class="pull-right">
+<div class="float-right">
     <button class="btn btn-secondary" title="Suppression de la ressource {{ $index+1 }}"><i class="fa fa-remove"></i></button>
 </div>
 <h3>Ressource {{ $index+1 }}</h3>
