--- a/app/App/Edition/tpl/edition-header.html
+++ b/app/App/Edition/tpl/edition-header.html
@@ -1,31 +1,30 @@
 <div class="row mb-5">
     <div class="col-auto mr-auto">
         <h1 class="page-heading mb-0"><i class="fa fa-edit" aria-hidden="true"></i> {{ entity.will.title }}</h1>
-        <span class="badge badge-status" data-ng-class="getStatusClassLabel(resource.transcript.status)">{{ resource.transcript.status | transcriptionStatusName }}</span>
+        <span class="badge badge-status" ng-class="getStatusClassLabel(resource.transcript.status)">{{ resource.transcript.status | transcriptionStatusName }}</span>
     </div>
-    <div class="col-auto  justify-content-end">
+    <div class="col-auto justify-content-end">
         <nav class="mt-4">
             <ul class="nav nav-pills">
                 <li class="nav-item" ng-include="'App/Edition/tpl/edition-header-editButton.html'"></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle"  role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-files-o fa-lg" aria-hidden="true"></i> Autres pages
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="nav-link dropdown-toggle"  role="button" id="dropdownMenuNavResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-files-o fa-lg" aria-hidden="true"></i> Autres pages</a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuNavResources">
                         <li ng-repeat="iResource in entity.resources">
                             <a class="dropdown-item" ng-if="iResource.id != resource.id" ui-sref="transcript.app.edition({idEntity: entity.id, idResource: iResource.id})">{{ iResource.type | ucFirstStrict }} {{ iResource.orderInWill }}</a>
-                            <a class="dropdown-item" ng-if="iResource.id == resource.id">{{ iResource.type | ucFirstStrict }} {{ iResource.orderInWill }}</a>
+                            <span class="dropdown-item" ng-if="iResource.id == resource.id">{{ iResource.type | ucFirstStrict }} {{ iResource.orderInWill }}</span>
                         </li>
                     </ul>
                 </li>
-                <li class="nav-item dropdown" data-ng-if="role == 'validator'">
-                    <a class="nav-link dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <li class="nav-item dropdown" ng-if="role == 'validator'">
+                    <a class="nav-link dropdown-toggle" role="button" id="dropdownMenuStatus" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-gear fa-lg" aria-hidden="true"></i> Changer l'état <i class="fa fa-spin fa-circle-o-notch" data-ng-if="admin.status.loading == true"></i>
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a  class="dropdown-item" ng-click="admin.status.action('todo')" ng-class="(resource.transcript.status == 'todo') ? 'bg-danger' : ''">À faire</a></li>
-                        <li><a  class="dropdown-item" ng-click="admin.status.action('transcription')" ng-class="(resource.transcript.status == 'transcription') ? 'bg-warning' : ''">En cours</a></li>
-                        <li><a  class="dropdown-item" ng-click="admin.status.action('validation')" ng-class="(resource.transcript.status == 'validation') ? 'bg-info' : ''">À valider</a></li>
-                        <li><a  class="dropdown-item" ng-click="admin.status.action('validated')" ng-class="(resource.transcript.status == 'validated') ? 'bg-success' : ''">Validé</a></li>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuStatus">
+                        <li><a class="dropdown-item" ng-click="admin.status.action('todo')" ng-class="(resource.transcript.status == 'todo') ? 'bg-danger' : ''">À faire</a></li>
+                        <li><a class="dropdown-item" ng-click="admin.status.action('transcription')" ng-class="(resource.transcript.status == 'transcription') ? 'bg-warning' : ''">En cours</a></li>
+                        <li><a class="dropdown-item" ng-click="admin.status.action('validation')" ng-class="(resource.transcript.status == 'validation') ? 'bg-info' : ''">À valider</a></li>
+                        <li><a class="dropdown-item" ng-click="admin.status.action('validated')" ng-class="(resource.transcript.status == 'validated') ? 'bg-success' : ''">Validé</a></li>
                     </ul>
                 </li>
             </ul>
