--- a/app/App/Taxonomy/tpl/form-place.html
+++ b/app/App/Taxonomy/tpl/form-place.html
@@ -58,8 +58,7 @@
         <input id="app-entity-edit-updateComment" class="form-control form-control-sm" data-ng-model="entity.updateComment" />
     </div>
 </div>
-
-
-<button data-ng-click="submit.action()" type="submit" class="btn btn-sm btn-primary">Soumettre <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
-
+<div class="text-right mt-2">
+    <button data-ng-click="submit.action()" type="submit" class="btn btn-sm btn-primary">Soumettre <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
+</div>
 <div class="clearfix"></div>
