--- a/app/System/Navbar/Navbar.html
+++ b/app/System/Navbar/Navbar.html
@@ -1,15 +1,14 @@
 <div class="row align-items-end header">
     <div class="col main-nav p-0">
-
         <nav role="navigation" id="main-nav" class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <h1><a ui-sref="transcript.app.home" data-ng-bind="preferences.projectTitle">Testaments de poilus</a></h1>
+            <h1><a ui-sref="transcript.app.home" ng-bind="preferences.projectTitle"></a></h1>
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav nav nav-justified">
-                    <li class="nav-item" data-ng-if="preferences.discoverHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.discoverHomeContent})">découvrir</a></li>
-                    <li class="nav-item" data-ng-if="preferences.helpHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.helpHomeContent})">aide</a></li>
+                    <li class="nav-item" ng-if="preferences.discoverHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.discoverHomeContent})">découvrir</a></li>
+                    <li class="nav-item" ng-if="preferences.helpHomeContent != null"><a class="nav-link" ui-sref="transcript.app.content({id: preferences.helpHomeContent})">aide</a></li>
                     <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.blog">actualités</a></li>
                     <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search">transcrire</a></li>
                     <li class="nav-item dropdown">
@@ -26,12 +25,12 @@
     </div>
     <div class="col-2 user-nav p-0">
         <div class="header-user">
-            <a data-ng-if="user != null" ui-sref="transcript.app.user.profile({id: user.id})">
-                <i data-ng-if="user.picture == null || user.picture == ''" class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i>
-                <img data-ng-if="user.picture != null && user.picture != ''" class="img-fluid rounded-circle" src="{{ api_web }}/uploads/{{ user.picture }}" />
+            <a ng-if="user != null" ui-sref="transcript.app.user.profile({id: user.id})">
+                <i ng-if="user.picture == null || user.picture == ''" class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i>
+                <img ng-if="user.picture != null && user.picture != ''" class="img-fluid rounded-circle" src="{{ api_web }}/uploads/{{ user.picture }}" />
                 {{ user.name }}
             </a>
-            <div data-ng-if="user == null">
+            <div ng-if="user == null">
                 <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i>
                 Espace utilisateur
             </div>
@@ -39,10 +38,10 @@
 
         <nav id="user-nav">
             <ul class="navbar-nav">
-                <li data-ng-if="user == null" class="unlogged">
+                <li ng-if="user == null" class="unlogged">
                     <a class="nav-link" ui-sref="transcript.app.security.register">s'inscrire</a> <span>|</span> <a  class="nav-link" ui-sref="transcript.app.security.login">se connecter</a>
                 </li>
-                <li data-ng-if="user != null" id="user-menu" class="nav-item dropdown">
+                <li ng-if="user != null" id="user-menu" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau de bord</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" ui-sref="transcript.app.user.profile({id: user.id})">Profil</a>
@@ -55,7 +54,6 @@
                     <a class="dropdown-item" href="https://testaments-de-poilus.myjetbrains.com/" target="_blank">BugTracker</a>
                     <a class="dropdown-item" permission permission-only="'ROLE_ADMIN'" ui-sref="transcript.admin.home">Admin</a>
                 </div>
-                </li>
             </ul>
         </nav>
     </div>
