--- a/app/Admin/Training/Edit/tpl/edit-presentation.html
+++ b/app/Admin/Training/Edit/tpl/edit-presentation.html
@@ -3,8 +3,7 @@
     <div class="col-md-10">
         <input id="admin-trainingContent-edit-image" type="string" class="form-control form-control-sm" data-ng-model="trainingContent.illustration" required="required" />
         <small class="form-text text-muted">Spécifiez une URL externe, ou uploadez une image par la suite</small>
-        <div ng-if="isExternMedia() == true && trainingContent.illustration != null"><img src="{{ trainingContent.illustration }}" class="img-150px" /></div>
-        <div ng-if="isExternMedia() == false && trainingContent.illustration != null"><img src="{{ api_web}}/uploads/{{ trainingContent.illustration }}" class="img-150px" /></div>
+        <div ng-if="trainingContent.illustration != null"><img src="{{ trainingContent.illustration | imageRender }}" class="img-150px" alt="Prévisualisation de votre image" title="Prévisualisation de votre image" /></div>
     </div>
 </div>
 <div class="form-group row">
