--- a/app/index.html
+++ b/app/index.html
@@ -163,6 +163,7 @@
     <script type="text/javascript" src="System/Filters/BooleanRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ClassicDateFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ContentTypeNameFilter.js"></script>
+    <script type="text/javascript" src="System/Filters/ImageRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/OrganisationNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ResourceTypeNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TaxonomyEntityNameConstructFilter.js"></script>
