--- a/app/App/Training/tpl/training-presentation.html
+++ b/app/App/Training/tpl/training-presentation.html
@@ -1,8 +1,7 @@
 <div ng-if="trainingContent.illustration != null" class="row">
     <div class="col-md-7" ng-include="'App/Training/tpl/training-mainContent.html'"></div>
     <div class="col-md-5">
-        <div ng-if="isExternMedia() == true"><img src="{{ trainingContent.illustration }}" class="img-fluid" /></div>
-        <div ng-if="isExternMedia() == false"><img src="{{ api_web}}/uploads/{{ trainingContent.illustration }}" class="img-fluid" /></div>
+        <img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
     </div>
 </div>
 <div ng-if="trainingContent.illustration == null" class="row">
